// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Expandable unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`renders Expandable with JSX markup unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 16px;"
    >
      <h1>
        Lorem ipsum
      </h1>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <h2>
        Suspendisse a sodales nulla, sed semper nisi.
      </h2>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <button>
        Dolor sit amet
      </button>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        ...
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with custom button CSS class unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 16px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223 test"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        ...
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with custom collapse symbol unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        test collapse
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with custom expand symbol unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 16px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        test
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with custom inner CSS class unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner test"
      style="max-height: 16px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        ...
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with custom wrapper CSS class unchanged 1`] = `
<div>
  <div
    class="memori-expandable test"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 16px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        ...
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with long text unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 16px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        ...
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Expandable with multiple rows unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 48px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
    <button
      class="_button_x9fzh_1 _button--ghost_x9fzh_145 _button--md_x9fzh_223"
      tabindex="0"
      type="button"
    >
      <span
        class="_button__content_x9fzh_26"
      >
        ...
      </span>
    </button>
  </div>
</div>
`;
